[b]Version 0.8.0[/b]:

(2012-03-15)
 * Add gradfun to video -> filters.
 * Add blur and sharpen filters.

(2012-03-14)
 * Support for drag and drop in the toolbar editor.

(2012-03-13)
 * Toolbar editor. If you right click on any toolbar you'll get a menu
   with options to edit the toolbars (including the control bars).
   That will show a new dialog, with two list. On the left you'll see
   all available actions (mainly buttons, but also volume or seek sliders) 
   and on the right the current actions.
   The left and right buttons allow to move actions from one list to the
   other. The up and down buttons move the selected action in the current
   actions' list.
   The "add separator" button allows to add more separators.
   The "defaults" button removes all your changes in the current actions' 
   list and sets the default actions for the toolbar.

(2012-03-08)
 * Use QtSingleApplication instead of the old client/server code to use a 
   single instance and communication with other instances.
 * Possibility (smplayer.pro) to disable the build of some parts of the
   code (QtSingleApplication, Youtube support, Find subtitles and 
   video preview).
 * Fix: the buttons to select the color of the subtiles in preferences ->
   subtitles may not change the background color with some styles. Now the
   color is changed using a stylesheet, so it should work with all styles.

(2012-03-03)
 * Improve detection of youtube urls.


[b]Version 0.7.1[/b]:

(2012-03-01)
 * Apply handle_local_urls.diff 
   (https://sourceforge.net/tracker/?func=detail&aid=3294481&group_id=185512&atid=913575)

(2012-02-27)
 * Youtube: flv videos now have the lowest priority.

(2012-02-25)
 * New option in the menu Options to run the smplayer youtube browser
   (if installed).
 * The single instance is enabled by default on windows.

(2012-02-22)
 * Now it's possible to change the opensubtitles server.
 * Opensubtitles: fix download link.