@@ -158,15 +158,12 @@ public slots:
 	void toggleDering(bool b);
 	void toggleGradfun();
 	void toggleGradfun(bool b);
-	void toggleBlur();
-	void toggleBlur(bool b);
-	void toggleSharpen();
-	void toggleSharpen(bool b);
 	void toggleNoise();
 	void toggleNoise(bool b);
 	void togglePostprocessing();
 	void togglePostprocessing(bool b);
 	void changeDenoise(int);
+	void changeUnsharp(int);
 	void changeLetterbox(bool);
 	void changeUpscale(bool);
 
